tests/reject/typeset_badtp.hi
fn f(x: $T) -> $T where Q: int | float:
    return x
fn main():
    println(str(f(1)))
